:memo: Docs: 240608 Python TIL README

--- a/Python/240608.md
+++ b/Python/240608.md
@@ -363,7 +363,7 @@ display(10,20)
     print(a) // 15
     ```
 
-8. Numeric / Container
+8. Numeric / Container 비교
     ```
     # Numeric type 끼리는 type이 달라도 연산 가능
     # 표현 범위가 넓은 type의 결과를 생성함  float > int > bool
